# AuditorCli

./: .gitignore  .gitmodules  CLAUDE.md  HOWTO.md  README.md  pyproject.toml
auditor/: cli.py  config.py  models.py
auditor/knowledge/: __init__.py  check_map.yaml  loader.py  skills_index.json
auditor/modules/m365/: auth.py  entra.py  exchange.py  graph.py  recon.py  sharepoint.py  teams.py
auditor/modules/report/: excel.py  generator.py
auditor/modules/web/: active.py  headers.py  passive.py
auditor/utils/: console.py  validators.py
scripts/: add-sharepoint-permission.ps1  setup-entra-app.ps1
tests/: test_excel.py  test_knowledge_loader.py  test_knowledge_registry.py  test_models.py  test_validators.py
