[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auditorcli"
version = "0.1.0"
description = "Security audit CLI for web apps, network services, and M365 tenants"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "pydantic>=2",
    "pydantic-settings>=2",
    "msal>=1.28",
    "python-dotenv>=1",
    "jinja2>=3",
    "dnspython>=2",
    "validators>=0.28",
    "openpyxl>=3.1",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[project.scripts]
auditor = "auditor.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["auditor*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
